# ParallelProgrammingLabs

./: CMakeLists.txt  one.cpp  two.cpp
